refactor Node operators section

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -35,8 +35,8 @@ how to delegate your stake and transfer it between validators.
     ]} />
 
 ### Join as a validator 
-These guides describe how to become a validator
-and manage the validator's profile.
+These guides describe how to become a validator, change commission,
+claim rewards, manage stake, and maintain the validator's profile.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/validators/onboarding/become-validator'),
@@ -48,7 +48,8 @@ and manage the validator's profile.
     findSidebarItem('/docs/validators/faq'),
     ]} />
 
-While these explain how to set up and run a node.
+While these gudies assist individuals or institutions responsible
+for setting up and confgiring nodes on the Ronin network.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/node-operators/mainnet/validator'),
@@ -64,11 +65,9 @@ documentation is available on the Sky Mavis Developer Portal:
 [https://docs.skymavis.com](https://docs.skymavis.com/docs/getting-started)
 
 ### Get involved
-#### Social media
 Stay informed on the latest Ronin news, events, and programs:
 
 * [Discord](https://discord.gg/P5GgF7SK)
 * [Twitter](https://twitter.com/ronin_network)
 
-#### Newsletter
 Sign up to [Ronin's Newsletter](https://roninblockchain.substack.com/)
