--- a/docs/node-operators/mainnet/validator.mdx
+++ b/docs/node-operators/mainnet/validator.mdx
@@ -1,29 +1,8 @@
----
-description: Set up a validator node on mainnet.
----
-
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 # Run a validator node
-This page describes how to set up and run a validator node on mainnet.
-
-You can do that in one of the two ways:
-* Run a validator node *and* a bridge operator node in one Docker container.
-* Run a validator node in one container, and a bridge operator node—in another.
-
-<Tabs groupId="node-setup">
-  <TabItem value="together" label="Validator and bridge">
-  
-  Follow the steps in the guide to set up both nodes.
-
-  </TabItem>
-  <TabItem value="separately" label="Validator only">
-
-  Complete the steps in this guide to set up a validator node, then follow [Run a bridge operator node](./bridge.md) to configure a bridge.
-
-  </TabItem>
-</Tabs>
+Set up a validator node on the Ronin mainnet.
 
 ## Latest release
 ### Validator
