--- a/docs/node-operators/testnet/validator.mdx
+++ b/docs/node-operators/testnet/validator.mdx
@@ -1,12 +1,8 @@
----
-description: Set up a validator node on testnet.
----
-
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 # Run a validator node
-This page describes how to set up and run a validator node on testnet.
+Set up a validator node on the Saigon testnet.
 
 You can do that in one of the two ways:
 * Run a validator node *and* a bridge operator node in one Docker container.
