add Track page, update Claim page for delegators, update Validator FAQ

--- a/docs/delegators/manage/activity.mdx
+++ b/docs/delegators/manage/activity.mdx
@@ -6,9 +6,8 @@ title: View activity
 import activity from './assets/activity.png';
 
 # View activity
-You can view your historical activity, such as staking operations and 
-reward claims, 
-by going to [RON staking](https://app.roninchain.com/staking) >
+View your activity, such as staking operations and 
+reward claims, on [RON staking](https://app.roninchain.com/staking) >
 **Activity**.
 
 <img src={activity} width={1440} />
