--- a/docs/delegators/rewards/claim.mdx
+++ b/docs/delegators/rewards/claim.mdx
@@ -5,13 +5,13 @@ import stepOne from './assets/claim-step-1.png'
 import stepTwo from './assets/claim-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
 
-# Claim reward
-Staking reward doesn't automatically re-stakes to your validators,
-and instead needs to be claimed manually.
-
+# Claim rewards
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **My staking**.
-2. Under **CLAIMABLE REWARDS**, select **Claim all**.
+
+2. Under **CLAIMABLE REWARDS**, select **Claim all**. This amount is
+the reward emitted from your total stake to your validators prior to 00:00 UTC
+today.
 <img src={stepOne} width={1440} />
 
 3. Select **Claim now**.
@@ -20,4 +20,5 @@ and instead needs to be claimed manually.
 4. Confirm the transaction.
 <img src={stepThree} width={400} />
 
-After the transaction is confirmed, the reward is credited to your wallet.
+After you claim the reward, the next claim is available at ~00:00 UTC 
+the following day.
