--- a/docs/validators/manage/analytics.mdx
+++ b/docs/validators/manage/analytics.mdx
@@ -6,9 +6,8 @@ title: View analytics
 import analytics from './assets/analytics.png';
 
 # View analytics
-You can view analytics about the rewards
-you earned and blocks you produced over different periods
-by going to [Validator Dashboard](https://validator.roninchain.com/) >
+View analytics about the rewards you earned and the blocks you
+produced over different periods on [Validator Dashboard](https://validator.roninchain.com/) >
 **My Staking** > **Analytics**.
 
 <img src={analytics} width={1280} />
