--- a/docs/validators/manage/maintenance.mdx
+++ b/docs/validators/manage/maintenance.mdx
@@ -8,8 +8,7 @@ import ongoingMaintenance from './assets/maintenance-ongoing.png';
 import upcomingMaintenance from './assets/maintenance-upcoming.png';
 
 # Schedule maintenance
-As a Standard Validator or Governing Validator, you can schedule
-maintenance for the node.
+Schedule a maintenance period for your node.
 
 :::caution
 There can be up to three validators scheduling maintenance mode
