--- a/docs/validators/manage/profile.mdx
+++ b/docs/validators/manage/profile.mdx
@@ -7,8 +7,8 @@ import profile from './assets/profile.png';
 import governingAddresses from './assets/governing-addresses.png';
 
 # View your profile
-You can view the list of addresses linked to your validator account
-by going to [Validator Dashboard](https://validator.roninchain.com) >
+View the list of addresses linked to your validator account on
+[Validator Dashboard](https://validator.roninchain.com) >
 your connected wallet > **My profile**.
 
 <img src={profile} width={280} />
