--- a/docs/validators/manage/renounce.mdx
+++ b/docs/validators/manage/renounce.mdx
@@ -7,7 +7,7 @@ import StepOne from './assets/renounce-step-1.png';
 import StepTwo from './assets/renounce-step-2.png';
 
 # Renounce your role
-You can renounce your role as a validator. 
+You can renounce your role of a validator.
 If you're a Standard Validator or Validator Candidate, 
 follow this guide. If you’re a Governing Validator, contact 
 the Sky Mavis team for renunciation.
