--- a/docs/validators/rewards/claim.mdx
+++ b/docs/validators/rewards/claim.mdx
@@ -9,6 +9,12 @@ import confirmTransaction from './assets/confirm-transaction.png';
 
 # Claim rewards
 
+## Types of rewards
+As a validator, you can earn three types of rewards:
+* **Commission.** Reward derived from the block rewards times the commission rate.
+* **Bridge reward.** Reward received for verifying transactions via Ronin Bridge. 
+* **Staking reward.** Reward derived from your self-stake and divided proportionally with your delegators.
+
 ## Commission and bridge rewards
 You don't need to claim commission and bridge rewards
 because they are transferred to you automatically
