--- a/docs/validators/manage/activity.mdx
+++ b/docs/validators/manage/activity.mdx
@@ -6,8 +6,8 @@ title: View activity
 import activity from './assets/activity.png';
 
 # View activity
-You can view your historical activity, such as staking operations,
-reward claims, and reward distributions, by going to
+View your activity, such as staking operations,
+reward claims, and reward distributions, on
 [Validator Dashboard](https://validator.roninchain.com/) >
 **My Staking** > **Activities**.
 
