paraphrase a sentence on Track page

--- a/docs/delegators/manage/track.mdx
+++ b/docs/delegators/manage/track.mdx
@@ -11,8 +11,8 @@ import renouncedValidator from './assets/renunciation.png'
 There are a few ways you can keep track of changes among your
 validators on [RON Staking](https://app.roninchain.com/staking):
 
-* Before staking to a validator, visit their profile to see the rewards,
-blocks, and the list of delegators.
+* Before staking to a validator, visit the validator's profile to 
+see their rewards, block analysis, and the list of their delegators.
 <img src={validatorDetails} width={1440} />
 
 * If a validator has scheduled to change their commission rate,
