--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -57,6 +57,9 @@ for setting up and confgiring nodes on the Ronin network.
     findSidebarItem('/docs/node-operators/mainnet/bridge'),
     findSidebarItem('/docs/node-operators/mainnet/non-validator'),
     findSidebarItem('/docs/node-operators/mainnet/archive'),
+    findSidebarItem('/docs/node-operators/latest-release'),
+    findSidebarItem('/docs/node-operators/generate-key'),
+    findSidebarItem('/docs/node-operators/mainnet/specification'),
     findSidebarItem('/docs/node-operators/faq'),
     ]} />
 
