feat: add bridge latest image

--- a/docs/node-operators/mainnet/latest-release.mdx
+++ b/docs/node-operators/mainnet/latest-release.mdx
@@ -25,3 +25,8 @@ OR
 `axieinfinity/ronin-mainnet:v2.5.2-9bf4895`
 
 # Bridge node
+
+* [Docker Hub](https://hub.docker.com/r/axieinfinity/bridge/tags)
+
+Latest:
+`axieinfinity/bridge:v0.2.3-56f7328`
