review and apply changes to node operator guides

--- a/docs/node-operators/index.mdx
+++ b/docs/node-operators/index.mdx
@@ -16,7 +16,7 @@ Set up and run your own node on the Ronin mainnet.
 Learn how to generate a private key.
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/generate-key'),
+    findSidebarItem('/docs/node-operators/keys'),
     ]} />
 
 Keep your node's software up to date.
@@ -26,14 +26,14 @@ Keep your node's software up to date.
     ]} />
 
 ### Secure your node
-Implement additional security measures for your validator node.
+Implement additional security measures for your Ronin node.
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/security'),
     ]} />
 
 ### Use Ronin CLI
-Manage your node using the Ronin CLI (command line interface).
+Manage your Ronin node using the Ronin CLI.
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/cli'),
