--- a/docs/node-operators/index.mdx
+++ b/docs/node-operators/index.mdx
@@ -1,47 +1,39 @@
----
-description: How to  starting point in this documentation.
----
-
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
 # Node operators
-### Set up your nodes on mainnet
-Set up your validator node and a bridge operator node on the Ronin mainnet.
+### Run your own node
+Set up and run your own node on the Ronin mainnet.
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/mainnet/specification'),
     findSidebarItem('/docs/node-operators/mainnet/validator'),
     findSidebarItem('/docs/node-operators/mainnet/bridge'),
-    ]} />
-
-Follow these guides to set up an RPC node or an archive node.
-
-<DocCardList items={[
     findSidebarItem('/docs/node-operators/mainnet/non-validator'),
     findSidebarItem('/docs/node-operators/mainnet/archive'),
     ]} />
 
-### Set up your nodes on testnet
-Step-by-step guides to set up your nodes on the Saigon testnet.
+Learn how to generate private keys.
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/testnet/specification'),
-    findSidebarItem('/docs/node-operators/testnet/validator'),
-    findSidebarItem('/docs/node-operators/testnet/bridge'),
-    findSidebarItem('/docs/node-operators/testnet/non-validator'),
-    findSidebarItem('/docs/node-operators/testnet/archive'),
+    findSidebarItem('/docs/node-operators/generate-keys'),
     ]} />
 
-### Increase security
-Implement additional security measures to harden your node.
+Keep your node's software up to date.
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/security'),
+    findSidebarItem('/docs/node-operators/upgrade'),
     ]} />
 
-### Use Ronin CLI 
-Manage your node using the Ronin CLI (command line interface).
+### Secure your node
+Implement additional security measures for your Ronin node.
+
+<DocCardList items={[
+    findSidebarItem('/docs/node-operators/secure'),
+    ]} />
+
+### Use Ronin CLI
+Manage your Ronin node using the Ronin CLI.
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/cli'),
