add question to Validator FAQ, update node operator guides

--- a/docs/node-operators/upgrade.mdx
+++ b/docs/node-operators/upgrade.mdx
@@ -34,7 +34,7 @@ To find the Docker image for each release, visit Docker Hub:
 [https://hub.docker.com/r/axieinfinity/bridge/tags](https://hub.docker.com/r/axieinfinity/bridge/tags)
 
 ### Latest image
-To download the latest image, update `NODE_IMAGE` in your `env` file
+To download the latest image, update `BRIDGE_IMAGE` in your `env` file
 to the following:
 ```
 axieinfinity/bridge:v0.2.3-56f7328
