--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -26,7 +26,7 @@ If a validator is unavailable when needed or shows signs of malicious
 behavior, they get penalized by having their stake or reward reduced,
 or _slashed_, as follows:
 * Reward slashing. Withholding rewards that the validator would've 
-otherwise received.
+otherwise earned.
 * RON slashing. Charging a fixed amount of RON tokens from 
 the validator's self-stake.
 
@@ -38,43 +38,43 @@ There are four groups of slashable cases on Ronin, where
 the rules previously described apply in combination.
 
 ### Double-sign validator
-The case where a validator node signs more than one block with the
-same height.
-
-The rules are as follows:
+It's a serious error when a validator signs more than one block with the same height.
+Anyone can submit a slash request with the double-sign evidence, which
+should contain the two block headers with the same height, sealed by
+the same validator. Upon verifying the evidence, the offending
+validator is slashed as follows:
 * The validator is jailed for $2^{63}-1$ blocks and can't be a
 validator in the future. Their status is set to **In jail**.
-* The validator gets slashed the minimum staking amount from their
-self-stake.
-* The validator can't claim commission or staking rewards during jail
-time.
+* The validator gets slashed the minimum staking amount of
+self-delegated RON.
+* The validator doesn't earn commission and staking rewards while in jail.
 
 <img src={doubleSign} width={1224} />
 
 ### Unavailability validator
-The case where a validator node misses a certain number of blocks
-during the day. There are three tiers in this slash.
+The performance of Ronin relies on the ability of everyone in the
+validator set to produce blocks on time when it's their turn.
+If a validator misses their turn, it affects the performance of
+the entire system. Thus, we implemented a mechanism that penalizes
+validators who miss too many blocks.
+
+We use a smart contract to record the number of missed blocks for each
+validator. If the number of missed blocks exceeds a predefined threshold,
+the validator gets slashed.
 
 #### Tier 1 validator slashing
-The validator misses the turn to produce blocks more than 50 times
-during the day.
-
-The rules are as follows:
-* The validator can't claim commission or staking rewards on that day.
-* The validator's status is set to **Punished**.
+If a validator misses more than 50 blocks a day, they don't earn
+commission and staking rewards on that day, and their status is set to **Punished**.
 
 <img src={valSlashTierOne} width={1224} />
 
 #### Tier 2 validator slashing
-The validator misses the turn to produce blocks more than 150 times
-during the day.
-
-The rules are as follows:
-* The validator is jailed for $\approx$ 2 days with the status set
-to **In jail**.
-* The validator gets slashed 10,000 RON.
-* The validator can't claim commission or staking rewards during
-jail time. 
+If a validator misses more than 150 blocks a day, they get slashed
+as follows:
+* The validator doesn't earn commission and staking rewards on that day.
+* The validator is slashed 10,000 of self-delegated RON.
+* The validator is jailed for $\approx2$ days (57,600 blocks) and is
+banned from the validator set while in jail.
 
 The validator can [bail out](bailout.mdx) of jail if they have
 sufficient credit score.
@@ -82,53 +82,43 @@ sufficient credit score.
 <img src={valSlashTierTwo} width={1224} />
 
 #### Tier 3 validator slashing
-The validator bails out of Tier 2 but misses the turn to 
-produce blocks more than 50 times on the same day.
+After being put in jail and getting bailed out, if the validator
+misses 50 more blocks within the day, they get slashed as follows:
+* The reward after bailing out is removed.
+* The validator is slashed 10,000 of self-delegated RON.
+* The validator is jailed for $\approx2$ days (57,600 blocks). 
 
-The rules are as follows:
-* The validator is jailed for $\approx$ 2 days with the status
-set to **In jail**.
-* The validator gets slashed 10,000 RON.
-* The validator can't claim commission or staking rewards during
-jail time.
-
-At this tier, the validator can’t bail out.
+This time, the validator can't bail out.
 
 <img src={valSlashTierThree} width={1224} />
 
 ### Unavailability bridge operator
-The case where a validator's bridge operator node misses a certain
-number of votes during the day. There are two tiers in this slash.
+The system slashes bridge operators for not providing enough signatures.
+There's a smart contract that records the number of the bridge operators' votes.
+There are two tiers in this slash.
 
 #### Tier 1 operator slashing
-The bridge operator misses more than 10% of votes during the day.
-
-The rules are as follows:
-* The corresponding validator can't claim bridge rewards on that day.
-* The corresponding validator's status is set to **Punished**.
+If a bridge operator misses more than 10% votes,
+the corresponding validator doesn't earn bridge rewards on that day.
 
 <img src={bridSlashTierOne} width={1224} />
 
 #### Tier 2 operator slashing
-The bridge operator misses more than 30% of votes during the day.
-
-The rules are as follows:
-* The corresponding validator can't claim any rewards (commission,
+If a bridge operator misses more than 30% votes, 
+the corresponding validator gets slashed as follows:
+* The validator doesn't earn any rewards (commission,
 staking rewards, bridge rewards) on that day.
-* The corresponding  validator is jailed for $\approx$ 2 days with
-the status set to **In Jail**.
-
-At this tier, the validator can’t bail out.
+* The validator is jailed for $\approx$ 2 days (57,600 blocks)
+with no option to bail out.
 
 <img src={bridSlashTierTwo} width={1224} />
 
 ### Relaying slash
-The case where a Governing Validator doesn’t sync the set of bridge
-operators to the Ethereum chain for three consecutive days.
-
-The rules are as follows:
-* The validator is slashed 10,000 RON.
-* The validator can't claim commission on the day of slashing.
+If a Governing Validator doesn’t sync the set of bridge
+operators to the Ethereum chain for three consecutive days,
+they get slashed as follows:
+* The validator is slashed 10,000 of self-delegated RON.
+* The validator doesn't earn commission on the day of slashing.
 * The validator's status is set to **Punished**.
 
 <img src={relayingSlash} width={1224} />
