fix: add clarification about three days since last stake

--- a/docs/delegators/stake/move.mdx
+++ b/docs/delegators/stake/move.mdx
@@ -7,9 +7,9 @@ import stepTwo from './assets/move-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
 
 # Move stake
-You can move your stake between different validators.
-For example, if a validator is renouncing or if you found
-another validator with higher returns.
+You can move your stake to a different validator at any time and
+without penalties as long as three days have passed since you last
+staked in to this validator.
 
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **My staking**.
