--- a/docs/delegators/stake/withdraw.mdx
+++ b/docs/delegators/stake/withdraw.mdx
@@ -7,8 +7,9 @@ import stepTwo from './assets/withdraw-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
 
 # Withdraw stake
-You can withdraw your stake at any time without penalties as
-long as three days have passed since you last staked in.
+You can withdraw your stake at any time and without penalties as
+long as three days have passed since you last staked in
+to this validator.
 
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **My staking**.
