fix: add a missing article

--- a/docs/node-operators/upgrade.mdx
+++ b/docs/node-operators/upgrade.mdx
@@ -2,7 +2,7 @@
 description: Upgrade node software to latest release. 
 ---
 
-# Upgrade node
+# Upgrade a node
 This page describes how to upgrade the software on your node to the
 latest version.
 
