refactor: a ton of changes

--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -14,6 +14,11 @@ import validatorDetails from './assets/validator-details.png'
 This page explains how to delegate your RON stake to a validator for the first time.
 You can also learn how to view all your delegations.
 
+<details>
+  <summary>If you're a visual learner, expand to see the official RON staking video tutorial.</summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/rCSA6edBub8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</details>
+
 ## Prerequisites
 The only prerequisite is to have RON tokens in your Ronin Wallet.
 
