--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -29,9 +29,10 @@ or _slashed_, as follows:
 otherwise earned.
 * RON slashing. Charging a fixed amount of RON tokens from 
 the validator's self-stake.
-
-In addition, the validator may be temporarily or permanently banned
+* The validator may be temporarily or permanently banned
 from the network, or _jailed_.
+
+Slashed RON go to back to the rewards pool, which is used to reward validators.
 
 ## Slashable cases
 There are four groups of slashable cases on Ronin, where
