--- a/docs/node-operators/index.mdx
+++ b/docs/node-operators/index.mdx
@@ -2,56 +2,51 @@ import DocCardList from '@theme/DocCardList';
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
 # Node operators
-### Run your own node
-Set up a validator node and a bridge operator node on different machines.
+### Run your own Ronin node
+These gudies assist individuals or institutions responsible
+for setting up and confguring a validator node on the Ronin network.
+The two methods of installation are via Docker or using the Ronin CLI. 
+
+On Ronin, validators are required to run a validator node and a bridge operator node.
+
+We recommended running both nodes on one machine:
+
+<DocCardList items={[
+    findSidebarItem('/docs/node-operators/mainnet/combined-validator'),
+    ]} />
+
+Or you can run the validator and bridge on two separate machines:
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/mainnet/validator'),
     findSidebarItem('/docs/node-operators/mainnet/bridge'),
     ]} />
 
-Or run both the validator and bridge on one machine combined. 
+Here's how to run and manage your validator node via Ronin CLI:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/combined-validator'),
+    findSidebarItem('/docs/node-operators/cli'),
     ]} />
 
-Learn how to generate private keys.
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/generate-keys'),
-    ]} />
-
-Keep your node's software up to date.
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/upgrade'),
-    ]} />
-
-Follow these guides to set up a non-validator node and an archive node.
+Guides to run other types of nodes:
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/mainnet/non-validator'),
     findSidebarItem('/docs/node-operators/mainnet/archive'),
     ]} />
 
-### Secure your node
-Implement additional security measures for your Ronin node.
+Maintain your node:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/secure'),
+    findSidebarItem('/docs/node-operators/maintenance/upgrade'),
+    findSidebarItem('/docs/node-operators/maintenance/generate-keys'),
+    findSidebarItem('/docs/node-operators/maintenance/secure'),
     ]} />
 
-### Use Ronin CLI
-Manage your Ronin node using the Ronin CLI.
+Resources for node operators:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/cli'),
+    findSidebarItem('/docs/node-operators/resources/faq'),
+    findSidebarItem('/docs/node-operators/resources/specification'),
     ]} />
 
-### FAQ
-Find answers to frequently asked questions.
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/faq'),
-    ]} />
