--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -51,10 +51,9 @@ claim rewards, manage stake, and maintain the validator's profile.
 
 ### Install and configure a validator node 
 These gudies assist individuals or institutions responsible
-for setting up and confguring a validator node on the Ronin network.
+for setting up and confguring a validator node. 
+On Ronin, validators are required to run a validator node *and* a bridge operator node.
 The two methods of installation are via Docker or using the Ronin CLI. 
-
-On Ronin, validators are required to run a validator node and a bridge operator node.
 
 We recommended running both nodes on one machine:
 
@@ -95,6 +94,15 @@ Resources for node operators:
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/resources/faq'),
     findSidebarItem('/docs/node-operators/resources/specification'),
+    ]} />
+
+These guides are for installing and configuring nodes on the Saigon testnet:
+
+<DocCardList items={[
+    findSidebarItem('/docs/node-operators/testnet/validator'),
+    findSidebarItem('/docs/node-operators/testnet/bridge'),
+    findSidebarItem('/docs/node-operators/testnet/non-validator'),
+    findSidebarItem('/docs/node-operators/testnet/archive'),
     ]} />
 
 ### Build on Ronin
