--- a/docs/node-operators/index.mdx
+++ b/docs/node-operators/index.mdx
@@ -4,22 +4,21 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
 # Node operators
 ### Run your own Ronin node
 These gudies assist individuals or institutions responsible
-for setting up and confguring a validator node on the Ronin network.
+for setting up and confguring a validator node on the Ronin mainnet. 
+On Ronin, validators are required to run a validator node *and* a bridge operator node.
 The two methods of installation are via Docker or using the Ronin CLI. 
-
-On Ronin, validators are required to run a validator node and a bridge operator node.
 
 We recommended running both nodes on one machine:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/combined-validator'),
+    findSidebarItem('/docs/node-operators/setup/combined-validator'),
     ]} />
 
 Or you can run the validator and bridge on two separate machines:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/validator'),
-    findSidebarItem('/docs/node-operators/mainnet/bridge'),
+    findSidebarItem('/docs/node-operators/setup/validator'),
+    findSidebarItem('/docs/node-operators/setup/bridge'),
     ]} />
 
 Here's how to run and manage your validator node via Ronin CLI:
@@ -31,8 +30,8 @@ Here's how to run and manage your validator node via Ronin CLI:
 Guides to run other types of nodes:
 
 <DocCardList items={[
-    findSidebarItem('/docs/node-operators/mainnet/non-validator'),
-    findSidebarItem('/docs/node-operators/mainnet/archive'),
+    findSidebarItem('/docs/node-operators/setup/non-validator'),
+    findSidebarItem('/docs/node-operators/setup/archive'),
     ]} />
 
 Maintain your node:
@@ -50,3 +49,11 @@ Resources for node operators:
     findSidebarItem('/docs/node-operators/resources/specification'),
     ]} />
 
+These guides are for installing and configuring nodes on the Saigon testnet:
+
+<DocCardList items={[
+    findSidebarItem('/docs/node-operators/testnet/validator'),
+    findSidebarItem('/docs/node-operators/testnet/bridge'),
+    findSidebarItem('/docs/node-operators/testnet/non-validator'),
+    findSidebarItem('/docs/node-operators/testnet/archive'),
+    ]} />
