fix: correct the order of numbered steps

--- a/docs/node-operators/testnet/validator.mdx
+++ b/docs/node-operators/testnet/validator.mdx
@@ -1,3 +1,7 @@
+---
+description: Instll a testnet validator node using Docker.
+---
+
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
@@ -34,13 +38,12 @@ Snapshot checksum using Md5sum: `741d0c68de1107547b849395c17f0f41`.
 * [ghcr.io/axieinfinity/bridge:v0.2.3-56f7328](https://github.com/axieinfinity/bridge-v2/pkgs/container/bridge/80601341?tag=v0.2.3-56f7328)
 
 ## Prerequisites
-
-* You must be a root user.
-* Your machine must meet the minimum hardware requirements:
+Recommended system requirements for running a validator node on the Saigon testnet:
+* [Docker Compose plugin](https://docs.docker.com/compose/install/)
+* A machine that meets the minimum hardware requirements:
   * 2 CPU cores
   * 8 GB RAM
   * 100 GB SSD
-* You need to have [docker-compose](https://docs.docker.com/compose/install/) installed.
 
 ## Set up and run
 1. In your working directory, create subdirectories for the config and chain data by running the following commands:
@@ -61,19 +64,19 @@ Snapshot checksum using Md5sum: `741d0c68de1107547b849395c17f0f41`.
   </TabItem>
 </Tabs>
 
-2. Navigate to the `ronin-manager` directory:
+2. Go to the `ronin-manager` directory:
 
 ```
 cd /axie/ronin-manager
 ```
 
-3. Create a `docker-compose` file:
+3. Create a `docker-compose.yml` file:
 
 ```
 vim docker-compose.yml
 ```
 
-4. Paste the following contents into the file:
+4. Copy this code block to the file:
 
 <Tabs groupId="node-setup">
   <TabItem value="together" label="Validator and bridge">
@@ -177,13 +180,13 @@ vim docker-compose.yml
   </TabItem>
 </Tabs>
 
-5. Create an `.env` file:
+5. Create an `.env` file. This file contains configuration parameters for your node.
 
 ```
 vim .env
 ```
 
-6. Paste the following contents into the file, replacing the `insert-...` placeholder values with your own:
+6. Copy this code block to the file, replacing the `insert-...` values with your information:
 
 <Tabs groupId="node-setup">
   <TabItem value="together" label="Validator and bridge">
@@ -283,4 +286,4 @@ mv chaindata-22-3-2023 chaindata
 cd /axie/ronin-manager && docker-compose up -d
 ```
 
-After a few minutes, go to the [stats page](https://saigon-stats.roninchain.com/) to check the status of your node. If it's green, the node is connected and up to date with the network.
+9. After a few minutes, go to the [stats page](https://saigon-stats.roninchain.com/) to check the status of your node. If it's green, the node is connected and up to date with the network.
