refactor: update Get started and Node operators pages

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -49,7 +49,7 @@ claim rewards, manage stake, and maintain the validator's profile.
     findSidebarItem('/docs/validators/faq'),
     ]} />
 
-### Install and configure a validator node 
+### Install a validator node 
 These gudies assist individuals or institutions responsible
 for setting up and confguring a validator node. 
 On Ronin, validators are required to run a validator node *and* a bridge operator node.
@@ -89,14 +89,14 @@ Maintain your node:
     findSidebarItem('/docs/node-operators/maintenance/secure'),
     ]} />
 
-Resources for node operators:
+Network specification and FAQ:
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/resources/faq'),
     findSidebarItem('/docs/node-operators/resources/specification'),
     ]} />
 
-These guides are for installing and configuring nodes on the Saigon testnet:
+Guides for installing and configuring nodes on the Saigon testnet:
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/testnet/validator'),
