--- a/docs/node-operators/index.mdx
+++ b/docs/node-operators/index.mdx
@@ -34,7 +34,7 @@ Guides to run other types of nodes:
     findSidebarItem('/docs/node-operators/mainnet/archive'),
     ]} />
 
-Maintain your node:
+### Maintain your node
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/maintenance/upgrade'),
@@ -42,13 +42,14 @@ Maintain your node:
     findSidebarItem('/docs/node-operators/maintenance/secure'),
     ]} />
 
-Resources for node operators:
+### Network specification and FAQ
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/resources/faq'),
     findSidebarItem('/docs/node-operators/resources/specification'),
     ]} />
 
+### Saigon testnet guides
 These guides are for installing and configuring nodes on the Saigon testnet:
 
 <DocCardList items={[
