feat: embed RON Staking Tutorial video

--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -11,19 +11,19 @@ import transactionSuccess from './assets/transaction-success.png'
 import validatorDetails from './assets/validator-details.png'
 
 # Become a delegator
-This page explains how to delegate your RON stake to a validator for the first time.
-You can also learn how to view all your delegations.
-
-<details>
-  <summary>If you're a visual learner, expand to see the official RON staking video tutorial.</summary>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/rCSA6edBub8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</details>
+This guide demonstrates how to delegate your RON stake to a validator
+and how to view all your delegations. The delegation tutorial is provided in
+two formats: [video](#video) and [text](#text).
 
 ## Prerequisites
 The only prerequisite is to have RON tokens in your Ronin Wallet.
 
 ## Delegate RON
+### Video
+Learn how to stake your RON with this official Staking Tutorial.
+<div class='embed-container'><iframe src='https://www.youtube.com/embed/rCSA6edBub8' frameborder='0' allowfullscreen></iframe></div>
 
+### Text
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **Connect wallet**.
 <img src={stepOne} width={1440} />
@@ -31,10 +31,11 @@ The only prerequisite is to have RON tokens in your Ronin Wallet.
 2. Switch to the **All validators** tab, pick a validator
 you want to delegate to, and then select **Delegate**.
 <img src={stepTwo} width={1440} />
-To learn more about a validator before making a decision,
-select the validator's name in the list to open the details
-page for that validator. You can also delegate from here.
-<img src={validatorDetails} width={1440} />
+
+  To learn more about a validator before making a decision,
+  open the details page by selecting the validator's name
+  from the list.
+  <img src={validatorDetails} width={1440} />
 
 3. Enter the amount manually or choose **Max** to stake all available RON,
 and then select **Delegate**. Expand the estimated yearly rewards to
