feat: embed RON Staking Tutorial video

--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -19,11 +19,11 @@ two formats: [video](#video) and [text](#text).
 The only prerequisite is to have RON tokens in your Ronin Wallet.
 
 ## Delegate RON
-### Video
+### Video tutorial {#video}
 Learn how to stake your RON with this official Staking Tutorial.
 <div class='embed-container'><iframe src='https://www.youtube.com/embed/rCSA6edBub8' frameborder='0' allowfullscreen></iframe></div>
 
-### Text
+### Text tutorial {#text}
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **Connect wallet**.
 <img src={stepOne} width={1440} />
