refactor: get rid of Maintenance section

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -57,28 +57,17 @@ Introduction:
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/mainnet/introduction'),
+    findSidebarItem('/docs/node-operators/latest'),
     ]} />
 
-Setup using Docker:
+Setup:
 
 <DocCardList items={[
     findSidebarItem('/docs/node-operators/mainnet/combined-validator'),
     findSidebarItem('/docs/node-operators/mainnet/validator'),
     findSidebarItem('/docs/node-operators/mainnet/bridge'),
-    ]} />
-
-Setup using Ronin CLI:
-
-<DocCardList items={[
     findSidebarItem('/docs/node-operators/cli'),
-    ]} />
-
-Maintenance:
-
-<DocCardList items={[
-    findSidebarItem('/docs/node-operators/maintenance/generate-keys'),
-    findSidebarItem('/docs/node-operators/maintenance/upgrade'),
-    findSidebarItem('/docs/node-operators/maintenance/secure'),
+    findSidebarItem('/docs/node-operators/generate-keys'),
     ]} />
 
 Resources:
@@ -87,6 +76,7 @@ Resources:
     findSidebarItem('/docs/node-operators/resources/faq'),
     findSidebarItem('/docs/node-operators/resources/configurations/mainnet'),
     findSidebarItem('/docs/node-operators/resources/configurations/testnet'),
+    findSidebarItem('/docs/node-operators/resources/security'),
     ]} />
 
 Saigon testnet guides:
