refactor and chore: update CLI page, standardize all mainnet guides, update sidebar

--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -32,7 +32,7 @@ the validator's self-stake.
 * The validator may be temporarily or permanently banned
 from the network, or _jailed_.
 
-Slashed RON go to back to the rewards pool, which is used to reward validators.
+Slashed RON go to back to the rewards pool.
 
 ## Slashable cases
 There are four groups of slashable cases on Ronin, where
