feat: add 'Introduction to nodes' page, move related definitions out of Key concepts

--- a/docs/validators/manage/commission.mdx
+++ b/docs/validators/manage/commission.mdx
@@ -8,7 +8,7 @@ import stepThree from './assets/change-commission-step-3.png';
 
 # Change commission rate
 When [registering](./../onboarding/become-validator.mdx) to become
-a validator, you set a commission rate—the percentage of block rewards
+a validator, you set a commission rate—the percentage of the block reward
 you receive before distributing the rest to your delegators.
 
 You can change this commission rate in your profile.
