--- a/docs/validators/manage/renounce.mdx
+++ b/docs/validators/manage/renounce.mdx
@@ -28,5 +28,5 @@ renunciation to take effect. To avoid slashing, keep your node
 online and up to date during this period.
 :::
 
-Your commission, bridge rewards, staking rewards, and the remaining
+Your commission, bridge reward, staking reward, and the remaining
 self-stake will be transferred to you on the date of renunciation.
