--- a/docs/validators/slashing/bailout.mdx
+++ b/docs/validators/slashing/bailout.mdx
@@ -36,5 +36,5 @@ self-stake amount.
 <img src={stepTwo} width={400} />
 
 If you bail out on the same day you got slashed, you still receive 50%
-of the block rewards (commission and staking) from the time you bailed
+of the commission and staking reward from the time you bailed
 out until the end of the day.
